# libotr

./: .gitignore  ChangeLog  Makefile.am  NEWS  Protocol-v3.html  README  configure.ac
src/: Makefile.am  chat_attest.c  chat_attest.h  chat_auth.c  chat_auth.h  chat_communication.c  chat_communication.h  chat_context.c  chat_context.h  chat_dake.c  chat_dake.h  chat_dh_key.c  chat_dh_key.h  chat_dske.c  chat_dske.h  chat_enc.c  chat_enc.h  chat_event.c  chat_event.h  chat_fingerprint.c  chat_fingerprint.h  chat_gka.c  chat_gka.h  chat_id_key.c  chat_id_key.h  chat_idkey.c  chat_idkey.h  chat_info.c  chat_info.h  chat_message.c  chat_message.h  chat_offer.c  chat_offer.h  chat_participant.c  chat_participant.h  chat_pending.c  chat_pending.h  chat_privkeydh.c  chat_privkeydh.h  chat_protocol.c  (+26 more)
